tests/bad_programs/syntax_errors/LEX_ERR_unclosed_parenthesis.notc
int main() {
    string s = "unclosed;
    return 0;
}
